{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 8,
  "lineage": "1b123ec3-217f-e31e-6aff-f0363afb7687",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "runner_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382824131:internet-gateway/igw-0fca7e4cc02a77ef2",
            "id": "igw-0fca7e4cc02a77ef2",
            "owner_id": "992382824131",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-runner-igw"
            },
            "tags_all": {
              "Name": "infra-runner-igw"
            },
            "vpc_id": "vpc-063626fba8a4d4077"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.runner_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "runner_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382824131:route-table/rtb-047ae047bd578544f",
            "id": "rtb-047ae047bd578544f",
            "owner_id": "992382824131",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fca7e4cc02a77ef2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infra-runner-route-table"
            },
            "tags_all": {
              "Name": "infra-runner-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-063626fba8a4d4077"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.runner_gw",
            "aws_vpc.runner_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "runner_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0302ae7aae4514a3a",
            "region": "us-east-1",
            "route_table_id": "rtb-047ae047bd578544f",
            "subnet_id": "subnet-0f0deeff5bf78b276"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.runner_gw",
            "aws_route_table.runner_route_table",
            "aws_subnet.runner_subnet",
            "aws_vpc.runner_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runner_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382824131:security-group/sg-0e2326a9f0b266673",
            "description": "Allow SSH and GitHub runner traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2326a9f0b266673",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "infra-runner-sg",
            "name_prefix": "",
            "owner_id": "992382824131",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "infra-runner-sg"
            },
            "tags_all": {
              "Name": "infra-runner-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-063626fba8a4d4077"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.runner_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "runner_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382824131:subnet/subnet-0f0deeff5bf78b276",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0deeff5bf78b276",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382824131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-runner-subnet"
            },
            "tags_all": {
              "Name": "infra-runner-subnet"
            },
            "vpc_id": "vpc-063626fba8a4d4077"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.runner_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "runner_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382824131:vpc/vpc-063626fba8a4d4077",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f99a09d2824df1af",
            "default_route_table_id": "rtb-0704bbc7026b46cd7",
            "default_security_group_id": "sg-05fba61b447e847d7",
            "dhcp_options_id": "dopt-012d8fdf03dbe251d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063626fba8a4d4077",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0704bbc7026b46cd7",
            "owner_id": "992382824131",
            "region": "us-east-1",
            "tags": {
              "Name": "infra-runner-vpc"
            },
            "tags_all": {
              "Name": "infra-runner-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}